# trinityrnaseq

./: .gitignore  .gitmodules  .travis.yml  Changelog.txt  LICENSE  Makefile  README  README.md  Release.Notes  Trinity  __pull_trinity_ext_sample_data.sh  developer.notes  make.macOSX.sh  notes
Analysis/DifferentialExpression/: DTE_to_DTU.pl  GOplot.Rscript  Glimma.Trinity.Rscript  PtR  ROKU.pl  Trinity_gene_splice_modeler.py  add_annot_to_trans_id.pl  add_annotations_to_GO_and_lengths_file.R  add_blastx_hit_to_trinity_id.pl  analyze_diff_expr.pl  assign_tissue_specific.pl  compare_gene_trans_DE_ranks.pl  (+41 more)
Butterfly/: .err  README.md  build_jar.xml
Chrysalis/: CMakeLists.txt  GraphFromFasta_MPI.cc  MakeDepend.cc  Makefile  Makefile_cxx  Makefile_g++  Makefile_g++_i386  Makefile_g++_x86_64  Makefile_g++_x86_64_mpi  Makefile_icpc  Makefile_psc  Makefile_targets  ReadsToComponents.pl  ReadsToTranscripts_MPI.cc  ReadsToTranscripts_MPI_chang.cc  chrysalis.notes
Chrysalis/MakeDepend.dSYM/Contents/: Info.plist
Chrysalis/MakeDepend.dSYM/Contents/Resources/DWARF/: MakeDepend
Chrysalis/analysis/: BreakTransByPairs.cc  BubbleUpClustering.cc  Chrysalis.cc  CreateIwormFastaBundle.cc  DNAVector.cc  DNAVector.h  GraphFromFasta.cc  IsoformAugment.cc  JoinTransByPairs.cc  KmerTable.cc  KmerTable.h  NonRedKmerTable.cc  NonRedKmerTable.h  Pool.h  QuantifyGraph.cc  ReadsToTranscripts.cc  RunButterfly.cc  TranscriptomeFromVaryK.cc  TranscriptomeGraph.cc  sequenceUtil.cc  stacktrace.cc  string_util.h
Chrysalis/base/: CommandLineParser.h  FileParser.cc  SVector.h  StringUtil.cc  StringUtil.h
Chrysalis/util/: checkLock.c  mutil.h
Docker/: .dockerignore  Changelog.txt  Dockerfile  README.md  VERSION.txt  build_docker.sh  cleanMe.sh  make_simg.sh  notes.txt  push_docker.sh  run_ext_test_docker.sh  run_ext_test_singularity.sh  run_test_docker.sh
Inchworm/: CMakeLists.txt  LICENSE  Makefile  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  notes
Inchworm/src/: Cigar.cpp  Cigar.hpp  DeBruijnGraph.cpp  DeBruijnGraph.hpp  FastaToDeBruijn.cpp  Fasta_entry.cpp  Fasta_entry.hpp  Fasta_reader.cpp  Fasta_reader.hpp  IRKE.cpp  IRKE.hpp  IRKE_run.cpp  KmerCounter.cpp  KmerCounter.hpp  Ktree.cpp  Ktree.hpp  KtreeNode.cpp  KtreeNode.hpp  Makefile  Makefile.am  Makefile.in  MaskedKmerCounter.cpp  MaskedKmerCounter.hpp  SAM_entry.cpp  SAM_entry.hpp  SAM_reader.cpp  SAM_reader.hpp  SNP_stomper.cpp  cigar_tweaker.cpp  common.hpp  fastaToKmerCoverageStats.cpp  irke_common.hpp  pull_reads_with_kmers.cpp  sequenceUtil.cpp  sequenceUtil.hpp  stacktrace.cpp  string_util.cpp
Inchworm/src/.deps/: Cigar.Po  DeBruijnGraph.Po  FastaToDeBruijn.Po  Fasta_entry.Po  Fasta_reader.Po  IRKE.Po  IRKE_run.Po  KmerCounter.Po  SAM_entry.Po  SAM_reader.Po  argProcessor.Po  cigar_tweaker.Po  fastaToKmerCoverageStats.Po  pull_reads_with_kmers.Po  sequenceUtil.Po  stacktrace.Po  string_util.Po
Inchworm/src/mpi_deprecated/: MPI_InchwormMakefile  MPI_cray.Makefile  MPIinchworm.cpp
MPI_Chrysalis/: GraphFromFasta_MPI.cc  Makefile  Makefile_auto  Makefile_deleta  Makefile_g++_alpha  Makefile_g++_i686  Makefile_g++_i86pc  Makefile_g++_ia64  Makefile_g++_macosx  Makefile_sunCC
PerlLib/: Ascii_genome_illustrator.pm  BED_utils.pm  BHStats.pm  CIGAR.pm  CMD_processor.pm  COMMON.pm  ColorGradient.pm  DelimParser.pm  EM.pm  Exons_to_geneobj.pm  Fasta_reader.pm  Fasta_retriever.pm  Fastq_reader.pm  GFF3_alignment_utils.pm  GFF3_utils.pm  GFF_maker.pm  GTF.pm  GTF_utils.pm  Gene_obj.pm  Gene_obj_indexer.pm  Ktree.pm  Longest_orf.pm  Nuc_translator.pm  Overlap_info.pm  Overlap_piler.pm  PSL_parser.pm  Pipeliner.pm  Process_cmd.pm  SAM_entry.pm  SingleLinkageClusterer.pm  Thread_helper.pm  TiedHash.pm  VCF_parser.pm  WigParser.pm  overlapping_nucs.ph  test_Fasta_retriever.pl  test_htc_gridrunner_LSF.pl  test_htc_gridrunner_SGE.pl
PyLib/: Pipeliner.py
WDL/: Dockerfile  build.sh  parse_commands.py  trinity.wdl  trinity_abundance_estimates_to_matrix.wdl  trinity_assembly.wdl  trinity_differential_expression.wdl  trinity_rna_seq.wdl  trinityrnaseq.wdl
docs/: README  advanced_trinity_guide.asciidoc  advanced_trinity_guide.html  genome_guided_trinity.html  index.asciidoc  index.html  trinity_faq.asciidoc  trinity_faq.html  trinity_insilico_normalization.asciidoc  trinity_insilico_normalization.html  trinity_rnaseq_tutorial.asciidoc  trinity_rnaseq_tutorial.html
galaxy-plugin/: EdgeR_differentialExpression.xml  EdgeR_differentialExpression_wrapper.py  RSEM_abundance_estimation.xml  abundance_estimation_to_matrix.xml  abundance_estimation_to_matrix_wrapper.py  analyze_diff_exp_wrapper.py  trinityToolWrapper.py  trinityrnaseq.xml
hpc_conf/: BroadInst_LSF.hour.10.conf  BroadInst_LSF.neurolab.10.conf  BroadInst_LSF.neurolab.100.conf  BroadInst_LSF.regev.1.conf  BroadInst_LSF.regev.10.conf  BroadInst_LSF.regev.100.conf  BroadInst_SGE.test.conf  SLURM.test.conf
htc_conf/: BroadInst_LSF.neurolab.1.conf  BroadInst_LSF.test.conf  BroadInst_LSF.week.1.conf  PBS.test.conf
sample_data/: Makefile
trinity-plugins/: Makefile  README  Trimmomatic  fastool  htslib-1.2.1.tar.bz2  jellyfish  parafly  samtools-0.1.19.tar.bz2  samtools-1.3.1.tar.bz2  transdecoder
trinity-plugins/parafly-r2013-01-21/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac
trinity-plugins/parafly-r2013-01-21/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
trinity-plugins/parafly-r2013-01-21/src/: Makefile  Makefile.in  ParaFly.cpp
util/: DiscordAFuse  SAM_nameSorted_to_uniq_count_stats.pl  TrinityStats.pl  Trinity_gene_splice_modeler.py  abundance_estimates_to_matrix.pl  align_and_estimate_abundance.pl  analyze_blastPlus_topHit_coverage.pl  bowtie_PE_separate_then_join.pl  darwin_sambamba  fasta_tool  filter_fasta_by_rsem_values.pl  filter_low_expr_transcripts.pl  insilico_read_normalization.pl  linux_sambamba  retrieve_sequences_from_fasta.pl  run_DE_analysis_from_samples_file.pl  run_RSEM_from_samples_file.pl  run_Trinity_edgeR_pipeline.pl  run_Trinity_from_samples_file.pl  sift_bam_max_cov.pl
(+1127 files in other folders)
